Fix hero title spacing

--- a/css/site.css
+++ b/css/site.css
@@ -505,6 +505,7 @@ a {
   font-style: normal;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 0.5em;
 }
 .hero__subtitle {
   text-align: center;
@@ -513,6 +514,7 @@ a {
   line-height: 1.25em;
   font-style: normal;
   margin-bottom: 90px;
+  margin-top: 0;
 }
 
 @media all and (min-width: 768px) {
