--- a/sass/course.scss
+++ b/sass/course.scss
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 0.5rem;
+  padding: 0 0.5em;
 }
 
 .text-center {
@@ -155,6 +156,7 @@
 
   .hero__subtitle {
     margin-bottom: 1rem;
+    margin-top: 0;
   }
 
   .hero {
