--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -20,6 +20,7 @@
     font-style: normal;
     font-weight: bold;
     text-align: center;
+    margin-bottom: 0.5em;
   }
 
   &__subtitle {
@@ -29,6 +30,7 @@
     line-height: 1.25em;
     font-style: normal;
     margin-bottom: 90px;
+    margin-top: 0;
   }
 }
 
